style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');

* {
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}


body {
    background-color: #F3F3F3;
}


/* INITIAL SCREEN */


.initial-screen {
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    bottom: 0;
    background-color: #FFFFFF;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    z-index: 1;
}

.init-input-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 100px;
}

.initial-screen img {
    height: 92px;
    width: 130px;
    margin-top: 150px;
}

.input-user-name{
    height: 54px;
    width: 261px;
    background-color: #FFFFFF;
    border: 1px solid #D7D7D7;
    border-radius: 4px;
    text-align: center;
    font-size: 18px;
    font-weight: 400;
}

button {
    height: 45px;
    width: 109px;
    border-radius: 9px;
    background-color: #E7E7E7;
    font-size: 18px;
    font-weight: 400;
    color: #696969;
    text-align: center;
    border: none;
    margin-top: 10px;
}



/* MAINSCREEN */


.header {
    height: 80px;
    background-color: #FFFFFF;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 15px 0 15px;
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
}

.logo {
    height: 53px;
    width: 75px;
}

.participants-icon {
    height: 30px;
    width: 42px;
}

.content {
    margin-top: 100px;
    overflow-y: scroll;
    margin-bottom: 100px;
}

ul {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

li {
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
    font-weight: 400;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    min-height: 40px;
    padding-left: 10px;
    word-break: break-word;
    margin: 2px 0;
}

.room-status {
    background-color: #DCDCDC;
}

.public-message {
    background-color: #FFFFFF;
}

.private-message {
    background-color: #FFDEDE;
}

.footer {
    height: 80px;
    width: 100%;
    margin-top: 30px;
    background-color: #FFFFFF;
    box-shadow: -1px -8px 6px rgba(0, 0, 0, 0.05);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 15px 0 15px;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
}

.msgm-box {
    border: none;
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    color: #000000;
    font-weight: 400;
    outline: none;
  
}

.msgm-box::placeholder{
    font-style: italic;
} 

.send-txt-button {
    height: 26px;
    width: 26px;
}


/* SIDEBAR */


.side-bar-screen {
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 1;
}

.side-bar {
    top: 0;
    bottom: 0;
    background-color: #FFFFFF;
    float: right;
    width: 300px;
    padding: 15px;
    height: 100%;
    word-break: break-all;
    overflow-y: scroll;
}

.side-title {
    display: flex;
    flex-direction: row;
    align-content: center;
    justify-content: center;
    margin-top: 15px;
    height: 40px;
    text-align: center;

}

.users-row{
    margin-bottom: 15px;
}

h1 {
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    font-size: 16px;
    line-height: 25px;
}

.side-segment {
    width: 100%;
    display: flex;
    flex-direction: column;
    margin-bottom: 25px;
    overflow-y: scroll;

}

.side-segment>div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 10px;
}

.side-segment>div div {
    display: flex;
    flex-direction: row;
    align-items: center;
}

p {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 16px;
    margin-left: 10px;
}

.ion{
    width: 30px;
}

.side-segment ion-icon {
    font-size: 25px;
}

.check-green {
    color: #28BB25;
    font-size: 20px;
}

.side-bar-screen> :nth-child(2) {
    width: 100%;
    height: 100%;
}


/* JS SCRIPT-STYLE */


.hidden {
    display: none !important; 
}

strong {
    font-weight: 700;
}

